--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
 
 <head>
-  <title>Title</title>
+  <title>2024-04-16 Systems Manager ハンズオン説明</title>
   <meta charset="utf-8">
   <style>
     @import url(https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
     @import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic);
     @import url(https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700,400italic);
+    @import url(https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&display=swap);
 
     body {
       font-family: 'Droid Serif';
@@ -16,8 +17,9 @@
     h1,
     h2,
     h3 {
-      font-family: 'Yanone Kaffeesatz';
-      font-weight: normal;
+      font-family: "M PLUS Rounded 1c", sans-serif;
+      font-weight: 400;
+      font-style: normal;
     }
 
     .remark-code,
