サポーター名を記入

--- a/index.html
+++ b/index.html
@@ -109,6 +109,10 @@ background-image: url(ops-jaws-logo.png)
 ハンズオンを技術的にサポートしてくれる方々に感謝いたします。（敬称略）  
 
 - [平木佳介](https://dev.classmethod.jp/author/hiraki-keisuke/)
+- [深澤俊](https://twitter.com/shun_quartet)
+- [前原良美](https://twitter.com/yoshimi0227_)
+- [大島悠司](https://twitter.com/yuj1osm)
+- [鈴木進吾](https://twitter.com/mominosin)
 
 
 ---
